Fix bug regarding z-index

--- a/client/sass/components/_testimonials.scss
+++ b/client/sass/components/_testimonials.scss
@@ -19,8 +19,10 @@
         justify-content: space-between;
         padding: 3rem 2rem;
         background-color: $color-light-1;
-        transition: all 0.5s ease-out;
-        z-index: 1000;
+        transition: all 0.5s ease-out 0.1s;
+        position: relative;
+        z-index: 10;
+
     }
 
     &__img-container {
@@ -54,12 +56,13 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        opacity: 0;
-        transition: all 0.5s ease-out;
+        // opacity: 0;
+        transition: all 0.5s ease-out 0.1s;
         color: $color-primary-dark;
         padding-bottom: 1rem;
         font-weight: 500;
         border-bottom: 1px solid $color-primary-dark;
+        z-index: 1;
         cursor: pointer;
 
         &:hover {
@@ -73,6 +76,6 @@
 
     &__container--individual:hover &__link{
         left: 15%;
-        opacity: 1;
+        // opacity: 1;
     }
 }
